force-app/main/default/objects/Capability_Map_Template__c/Capability_Map_Template__c.object-meta.xml
<CustomObject>
    <label>Capability Map Template</label>
    <pluralLabel>Capability Map Templates</pluralLabel>
    <nameField>
        <label>Map Template Number</label>
        <type>AutoNumber</type>
        <displayFormat>CMT-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object linking Capability Maps to applied Templates (supports multi-template)</description>
</CustomObject>