force-app/main/default/objects/Capability_Map_Template__c/fields/Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Applied_By__c</fullName>
    <label>Applied By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Applied Templates</relationshipLabel>
    <relationshipName>Applied_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>