force-app/main/default/objects/Capability_Map_Template__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <label>Applied Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>