force-app/main/default/objects/Capability_Map_Template__c/fields/Capability_Template__c.field-meta.xml
<CustomField>
    <fullName>Capability_Template__c</fullName>
    <label>Capability Template</label>
    <type>Lookup</type>
    <referenceTo>Capability_Template__c</referenceTo>
    <relationshipLabel>Map Usages</relationshipLabel>
    <relationshipName>Map_Usages</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>